<?xml version="1.0" encoding="UTF-8"?>

<!--
  Licensed to the Apache Software Foundation (ASF) under one or more
  contributor license agreements.  See the NOTICE file distributed with
  this work for additional information regarding copyright ownership.
  The ASF licenses this file to You under the Apache License, Version 2.0
  (the "License"); you may not use this file except in compliance with
  the License.  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.apache.ignite</groupId>
        <artifactId>ignite-parent</artifactId>
        <version>2.17.0-SNAPSHOT</version>
        <relativePath /> <!-- lookup parent from repository -->
    </parent>

    <artifactId>ignite-parent-ext-internal</artifactId>
    <packaging>pom</packaging>
    <version>1</version>

    <properties>
        <spring-boot.version>2.2.13.RELEASE</spring-boot.version>
        <spring.data.version>2.2.13.RELEASE</spring.data.version>
        <spring.data32.version>3.2.5</spring.data32.version>
        <spring53.version>5.3.19</spring53.version>
        <spring61.version>6.1.6</spring61.version>
        <activemq.version>5.12.0</activemq.version>
        <aspectj.version>1.8.13</aspectj.version>

        <!--
            NOTE: The dependency versions below must be changed in the release branch up to
            the latest released version prior to an extension release.
        -->
        <ignite-spring-data-ext.release.version>2.0.0</ignite-spring-data-ext.release.version>
        <ignite-spring-data-commons.release.version>1.1.0</ignite-spring-data-commons.release.version>
    </properties>

    <scm>
        <url>https://gitbox.apache.org/repos/asf/ignite-extensions.git</url>
        <connection>scm:git:https://gitbox.apache.org/repos/asf/ignite-extensions.git</connection>
        <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/ignite-extensions.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <repositories>
        <repository>
            <id>snapshots</id>
            <name>Apache Snapshot Repository</name>
            <url>https://repository.apache.org/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.ignite</groupId>
                <artifactId>ignite-bom</artifactId>
                <version>${ignite.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-bom</artifactId>
                <version>${log4j2.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- The TestSuiteAwareTestsetReporter added to classpath for the maven-surefire-plugin. -->
        <dependency>
            <groupId>org.apache.ignite</groupId>
            <artifactId>ignite-tools</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <inherited>false</inherited>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <inherited>false</inherited>
                        <phase/>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>extension-release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>source-assembly</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>single</goal>
                                </goals>
                                <configuration>
                                    <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
                                    <descriptors>
                                        <descriptor>../../assembly/source-release.xml</descriptor>
                                    </descriptors>
                                    <finalName>ignite-${project.projectDirectory.name}-src</finalName>
                                    <appendAssemblyId>false</appendAssemblyId>
                                </configuration>
                            </execution>
                            <execution>
                                <id>binary-assembly</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>single</goal>
                                </goals>
                                <configuration>
                                    <descriptorSourceDirectory>${project.basedir}/assembly</descriptorSourceDirectory>
                                    <!-- Assembly id will be attached to the final name in favor the release name. -->
                                    <finalName>${project.artifactId}</finalName>
                                    <ignoreMissingDescriptor>true</ignoreMissingDescriptor>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <inherited>true</inherited>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-deploy-plugin</artifactId>
                        <configuration>
                            <!-- We want to deploy the artifact to a staging location. -->
                            <updateReleaseInfo>true</updateReleaseInfo>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>net.nicoulaj.maven.plugins</groupId>
                        <artifactId>checksum-maven-plugin</artifactId>
                        <version>1.10</version>
                        <executions>
                            <execution>
                                <id>checksum</id>
                                <goals>
                                    <goal>artifacts</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <algorithms>
                                <algorithm>SHA-512</algorithm>
                            </algorithms>
                            <appendFilename>true</appendFilename>
                            <excludeMainArtifact>true</excludeMainArtifact>
                            <failIfNoFiles>false</failIfNoFiles>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>java-11+</id>
            <activation>
                <jdk>[11,)</jdk>
            </activation>
            <properties>
                <maven.compiler.source>1.8</maven.compiler.source>
                <maven.compiler.target>11</maven.compiler.target>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <!-- Do not bring ignite logic -->
                        <inherited>false</inherited>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <forkCount>1</forkCount>
                            <argLine>
                                --add-opens=java.base/jdk.internal.access=ALL-UNNAMED
                                --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
                                --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED
                                --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
                                --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                                --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
                                --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
                                --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
                                --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
                                --add-opens=java.base/java.io=ALL-UNNAMED
                                --add-opens=java.base/java.net=ALL-UNNAMED
                                --add-opens=java.base/java.nio=ALL-UNNAMED
                                --add-opens=java.base/java.security.cert=ALL-UNNAMED
                                --add-opens=java.base/java.util=ALL-UNNAMED
                                --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                                --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
                                --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
                                --add-opens=java.base/java.lang=ALL-UNNAMED
                                --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
                                --add-opens=java.base/java.time=ALL-UNNAMED
                                --add-opens=java.base/sun.security.ssl=ALL-UNNAMED
                                --add-opens=java.base/sun.security.x509=ALL-UNNAMED
                                --add-opens=java.base/sun.net.util=ALL-UNNAMED
                                --add-opens=java.sql/java.sql=ALL-UNNAMED
                                --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                                --add-opens=java.base/java.text=ALL-UNNAMED
                                --add-opens=java.desktop/java.awt.font=ALL-UNNAMED
                            </argLine>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>io.gatling</groupId>
                        <artifactId>gatling-maven-plugin</artifactId>
                        <configuration>
                            <jvmArgs>
                                <jvmArg>--add-opens=java.base/jdk.internal.access=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/java.io=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/java.net=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/java.nio=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/java.security.cert=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/java.time=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/sun.security.ssl=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/sun.security.x509=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/sun.net.util=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.sql/java.sql=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/java.text=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.desktop/java.awt.font=ALL-UNNAMED</jvmArg>
                            </jvmArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
